# ckanext-summarystats

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml
ckanext/summarystats/: click.py  command.py  constants.py  graphics.py  implementations.py  interfaces.py  jobs.py  package_helper.py  plugin.py
ckanext/summarystats/tests/: mockplugin.py  test_plugin.py
docs/: Pipfile  README.md
docs/source/: conf.py  index.md
docs/source/_static/css/: custom.css
